# orders

./: .gitignore  docker-compose.yaml  mypy.ini  pyproject.toml  pytest.ini
ordermanagement/: asgi.py  settings.py  urls.py  wsgi.py
orders/: models.py  serializers.py  tests.py  urls.py  views.py
orders/migrations/: 0001_product_definition.py  0002_customer.py  0003_order.py  0004_order_order_date.py  0005_order_customer.py  0006_order_order_status_alter_order_customer.py  0007_orderitem.py  0008_order_city_order_country_order_state_and_more.py  0009_remove_order_city_remove_order_country_and_more.py
orders/tests/: customer_tests.py  order_tests.py  product_tests.py
